--- a/package.json
+++ b/package.json
@@ -1,17 +1,7 @@
 {
-  "name": "page-de-connexion-html",
+  "name": "votre-nom-de-projet",
   "version": "1.0.0",
   "dependencies": {
-    "@vercel/kv": "^...",
-    "bcrypt": "^..."
-    // autres dépendances de production
-  },
-  "devDependencies": {
-    "@vercel/node": "^..."
-  },
-  "scripts": {
-    "dev": "...",
-    "build": "vercel build",
-    "start": "vercel start"
+    "uuid": "^9.0.1"
   }
 }
