--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "votre-projet-principal",
+  "name": "page-de-connexion-html",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
